@@ -307,6 +307,7 @@ Bug fix: NPE in MoreThanOneLogger
 UnnecessaryParentheses now checks all expressions, not just return statements
 UnusedFormalParameter now reports violations on the parameter node, not the method/constructor node
 Updates to RuleChain to honor RuleSet exclude-pattern
+Optimizations and false positive fixes in PreserveStackTrace
 
 New rules:
 
